# eigo-no-sensei-using-Gemini

./: Dockerfile  Makefile  README.ja.md  README.md  config.py  custom.css  llmmod.py  main.py  prompts.md  pyproject.toml
.chainlit/: config.toml
