[tool.poetry]
name = "eigo-no-sensei-using-gemini"
version = "0.1.0"
description = ""
authors = ["shin5ok <shin5ok@55mp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-cloud-aiplatform = "^1.63.0"
chainlit = "^1.1.402"
google-cloud-speech = "^2.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
